added loki-approve script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "loki-test": "loki test",
-    "loki-update": "loki update"
+    "loki-update": "loki update",
+    "loki-approve": "loki approve"
   },
   "dependencies": {
     "react": "^18.2.0",
